Removing unwanted stuff

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,8 @@ Changelog
 1.0.0 (unreleased)
 -------------
 
-- Aggiunto validatore campi email, telefono e cellulare in form richiesta 
+- Removed buttons from the folder_contents view of PrenotazioniFolder [alert]
+- Removed actions menu for Prenotazione [alert]
+- Aggiunto validatore campi email, telefono e cellulare in form richiesta
   prenotazioni [nicolasenno]
 - Rimosso campo email obbligatorio form richiesta prenotazioni [nicolasenno]
