--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,11 +1,21 @@
 Changelog
 =========
 
-## Thsi changes file is duplicated. Check the main one under buildout-dir ##
 
 1.0.0 (2014-05-05)
 ------------------
 
+- Upgrade step for repositorytool profile [nicolasenno]
+- Added to logger detail about modification, old value new value [nicolasenno]·
+- Added logger for IPrenotazione objects modification [nicolasenno]
+- Patching Prenotazione schema to allow modification to prenotazione objects
+  without email [alert]
+- Removed buttons from the folder_contents view of PrenotazioniFolder [alert]
+- Removed actions menu for Prenotazione [alert]
+- Aggiunto validatore campi email, telefono e cellulare in form richiesta
+  prenotazioni [nicolasenno]
+- Added events logger for IPrenotazione [nicolasenno]
+- Rimosso campo email obbligatorio form richiesta prenotazioni [nicolasenno]
 - Added event handler logger
 - Package created using templer
   [RedTurtle Technology]
