Added a confirmation page for anonymous users.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,8 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Added a confirmation page for anonymous users.
+  [alert]
 
 
 1.0.0 (2014-05-05)
