--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,8 @@ Changelog
 
 - Small modifications on pdf
 - Added a confirmation page for anonymous users.
+- Readers can search bookings
+- Requires rg.prenotazioni > 3.3.0
   [alert]
 
 
