Moved code from src to package root

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,9 @@
 
-1.0.2 (unreleased)
+1.1.0 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Index also revision history
+  [alert]
 
 
 1.0.1 (2014-06-04)
