--- a/pd/prenotazioni/locales/it/LC_MESSAGES/pd.prenotazioni.po
+++ b/pd/prenotazioni/locales/it/LC_MESSAGES/pd.prenotazioni.po
@@ -2,8 +2,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2014-05-20 08:56+0000\n"
-"PO-Revision-Date: 2014-05-20 10:56+0200\n"
+"POT-Creation-Date: 2014-07-16 15:02+0000\n"
+"PO-Revision-Date: 2014-07-16 17:06+0200\n"
 "Last-Translator: Alessandro Pisa <alessandro.pisa@redturtle.it>\n"
 "Language-Team: American English <kde-i18n-doc@kde.org>\n"
 "MIME-Version: 1.0\n"
@@ -17,13 +17,22 @@ msgstr ""
 "Language: en_US\n"
 "X-Generator: Lokalize 1.5\n"
 
-#. Default: "Booking confirmation"
-#: ./browser/prenotazione_add.py:122
-msgid "booking_confirmation"
-msgstr "Conferma prenotazione"
+#: ./browser/contentrules_patch.py:37
+msgid "Assignments deleted."
+msgstr ""
+
+#. Default: "Annulla"
+#: ./browser/prenotazione_add.py:125
+msgid "action_cancel"
+msgstr "Annulla"
+
+#. Default: "Conferma"
+#: ./browser/prenotazione_add.py:177
+msgid "action_confirm"
+msgstr "Confermare"
 
 #. Default: "We assigned you a booking time. Please review your data before confirming your booking"
-#: ./browser/prenotazione_add.py:126
+#: ./browser/prenotazione_add.py:143
 msgid "booking_confirmation_help"
 msgstr ""
 "Ti è stata assegnato un orario per la prenotazione. Per favore verifica i "
@@ -34,26 +43,56 @@ msgstr ""
 msgid "booking_receipt"
 msgstr "Ricevuta della prenotazione"
 
-#. Default: "Invalid checksum"
+#. Default: "Prenotazione da confermare"
 #: ./browser/prenotazione_add.py:139
+msgid "booking_to_be_confirmed"
+msgstr "Prenotazione da confermare"
+
+#. Default: "Invalid checksum"
+#: ./browser/prenotazione_add.py:156
 msgid "checksum_error"
 msgstr "Codice di controllo errato"
 
 #. Default: "You have to provide at least one of these fields: email, phone, mobile"
-#: ./browser/prenotazione_add.py:79
+#: ./browser/prenotazione_add.py:80
 msgid "contact_details_error"
 msgstr ""
 "Devi specificare almeno un campo tra questi: Email, Numero di telefono, "
 "Numero di cellulare"
 
+#. Default: "States if it is not allowed to reserve a booking during the current day"
+#: ./extender.py:27
+msgid "help_same_day_booking_disallowed"
+msgstr "Stabilisce se è vietata la prenotazione per il giorno stesso"
+
 #. Default: "Mobile phone number not valid"
-#: ./browser/prenotazione_add.py:17
+#: ./browser/prenotazione_add.py:18
 msgid "invalid_mobile_number"
 msgstr "Numero non valido"
 
+#. Default: "Same day booking disallowed"
+#: ./extender.py:23
+msgid "label_same_day_booking_disallowed"
+msgstr "Agenda non prenotabile giorno su giorno"
+
+#. Default: "No"
+#: ./browser/widgets/same_day_booking_disallowed.py:29
+msgid "no"
+msgstr ""
+
+#. Default: "No, just for today"
+#: ./browser/widgets/same_day_booking_disallowed.py:30
+msgid "no_today"
+msgstr ""
+
 #. Default: "Verification code"
-#: ./browser/prenotazione_add.py:155
+#: ./browser/prenotazione_add.py:172
 msgid "verification_code"
 msgstr "Codice di controllo"
+
+#. Default: "Yes"
+#: ./browser/widgets/same_day_booking_disallowed.py:28
+msgid "yes"
+msgstr ""
 
 
