--- a/pd/prenotazioni/locales/it/LC_MESSAGES/pd.prenotazioni.po
+++ b/pd/prenotazioni/locales/it/LC_MESSAGES/pd.prenotazioni.po
@@ -2,8 +2,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2014-08-05 14:37+0000\n"
-"PO-Revision-Date: 2014-08-05 16:42+0200\n"
+"POT-Creation-Date: 2014-09-01 10:13+0000\n"
+"PO-Revision-Date: 2014-09-01 12:18+0200\n"
 "Last-Translator: Alessandro Pisa <alessandro.pisa@redturtle.it>\n"
 "Language-Team: American English <kde-i18n-doc@kde.org>\n"
 "MIME-Version: 1.0\n"
@@ -17,22 +17,64 @@ msgstr ""
 "Language: en_US\n"
 "X-Generator: Lokalize 1.5\n"
 
+#: ./browser/stats/booking_stats.py:50
+#: ./browser/stats/booking_stats_delete.py:18
+msgid " format (YYYY-MM-DD)"
+msgstr ""
+
 #: ./browser/contentrules_patch.py:37
 msgid "Assignments deleted."
 msgstr ""
 
-#. Default: "Annulla"
-#: ./browser/prenotazione_add.py:127
+#: ./browser/stats/booking_stats.pt:158
+msgid "Content listing"
+msgstr ""
+
+#: ./browser/stats/booking_stats.pt:21
+msgid "Error"
+msgstr ""
+
+#: ./browser/stats/booking_stats.pt:135
+msgid "Found ${value} entries"
+msgstr "Trovati ${value} eventi"
+
+#: ./browser/stats/booking_stats.pt:26
+msgid "Info"
+msgstr ""
+
+#: ./browser/stats/booking_stats.pt:211
+msgid "Statistics are not available"
+msgstr "Statistiche non disponibili"
+
+#. Default: "Cancel"
+#: ./browser/prenotazione_add.py:130
+#: ./browser/stats/booking_stats.py:205
+#: ./browser/stats/booking_stats_delete.py:116
 msgid "action_cancel"
 msgstr "Annulla"
 
 #. Default: "Conferma"
-#: ./browser/prenotazione_add.py:179
+#: ./browser/prenotazione_add.py:182
 msgid "action_confirm"
 msgstr "Confermare"
 
+#. Default: "CSV"
+#: ./browser/stats/booking_stats.py:198
+msgid "action_csv"
+msgstr "CSV "
+
+#. Default: "Delete"
+#: ./browser/stats/booking_stats_delete.py:104
+msgid "action_delete"
+msgstr "Cancella"
+
+#. Default: "Search"
+#: ./browser/stats/booking_stats.py:191
+msgid "action_search"
+msgstr "Cerca "
+
 #. Default: "We assigned you a booking time. Please review your data before confirming your booking"
-#: ./browser/prenotazione_add.py:145
+#: ./browser/prenotazione_add.py:148
 msgid "booking_confirmation_help"
 msgstr ""
 "Ti è stata assegnato un orario per la prenotazione. Per favore verifica i "
@@ -44,21 +86,25 @@ msgid "booking_receipt"
 msgstr "Ricevuta della prenotazione"
 
 #. Default: "Prenotazione da confermare"
-#: ./browser/prenotazione_add.py:141
+#: ./browser/prenotazione_add.py:144
 msgid "booking_to_be_confirmed"
 msgstr "Prenotazione da confermare"
 
 #. Default: "Invalid checksum"
-#: ./browser/prenotazione_add.py:158
+#: ./browser/prenotazione_add.py:161
 msgid "checksum_error"
 msgstr "Codice di controllo errato"
 
 #. Default: "You have to provide at least one of these fields: email, phone, mobile"
-#: ./browser/prenotazione_add.py:82
+#: ./browser/prenotazione_add.py:85
 msgid "contact_details_error"
 msgstr ""
 "Devi specificare almeno un campo tra questi: Email, Numero di telefono, "
 "Numero di cellulare"
+
+#: ./browser/stats/booking_stats.pt:144
+msgid "from ${value}"
+msgstr "dal ${value}"
 
 #. Default: "User will not be able to add a booking unless those fields are filled. Remember that, whatever you selected in this list, users have to supply at least one of \"Email\", \"Mobile\", or \"Telephone\""
 #: ./extender.py:38
@@ -74,10 +120,25 @@ msgstr ""
 msgid "help_same_day_booking_disallowed"
 msgstr "Stabilisce se è vietata la prenotazione per il giorno stesso"
 
+#. Default: "Invalid start or end date"
+#: ./browser/stats/booking_stats.py:27
+msgid "invalid_end:search_date"
+msgstr "Data di inizio o fine non valida"
+
 #. Default: "Mobile phone number not valid"
 #: ./browser/prenotazione_add.py:18
 msgid "invalid_mobile_number"
 msgstr "Numero non valido"
+
+#. Default: "Delete date "
+#: ./browser/stats/booking_stats_delete.py:17
+msgid "label_delete_date"
+msgstr "Cancella data"
+
+#. Default: "End date"
+#: ./browser/stats/booking_stats.py:56
+msgid "label_end"
+msgstr "Data di fine"
 
 #. Default: "Required booking fields"
 #: ./extender.py:34
@@ -89,6 +150,16 @@ msgstr "Campi richiesti in fase di prenotazione"
 msgid "label_same_day_booking_disallowed"
 msgstr "Agenda non prenotabile giorno su giorno"
 
+#. Default: "Start date "
+#: ./browser/stats/booking_stats.py:49
+msgid "label_start"
+msgstr "Data di inizio"
+
+#. Default: "User"
+#: ./browser/stats/booking_stats.py:44
+msgid "label_user"
+msgstr "Utente"
+
 #. Default: "No"
 #: ./browser/widgets/same_day_booking_disallowed.py:29
 msgid "no"
@@ -99,10 +170,23 @@ msgstr "No"
 msgid "no_today"
 msgstr "No, solo per oggi"
 
+#. Default: "Required"
+#: ./browser/stats/booking_stats.pt:85
+msgid "title_required"
+msgstr "Obligatorio "
+
+#: ./browser/stats/booking_stats.pt:148
+msgid "to ${value}"
+msgstr "al ${value}"
+
 #. Default: "Verification code"
-#: ./browser/prenotazione_add.py:174
+#: ./browser/prenotazione_add.py:177
 msgid "verification_code"
 msgstr "Codice di controllo"
+
+#: ./browser/stats/booking_stats.pt:140
+msgid "with user matching &quote;${value}&quote;"
+msgstr "con id utente contente &quot;${value}&quot;"
 
 #. Default: "Yes"
 #: ./browser/widgets/same_day_booking_disallowed.py:28
